# scshot

./: .gitignore  README.md  config.en.toml  config.example.toml  pyproject.toml
src/scshot/: __init__.py  __main__.py  history.py
tests/: test_history.py  test_scshot.py
